chore: create gitgnor

--- a/CW/week16/task_management/.gitignore
+++ b/CW/week16/task_management/.gitignore
@@ -1,3 +1,8 @@
 .idea
 /task/migrations/
 CW
+user/migrations
+task/migrations
+task/__pycache__/
+../../../New folder/BlogPlatformProjec
+user/__pycache__/
