chore: update gitgnor

--- a/CW/week16/task_management/.gitignore
+++ b/CW/week16/task_management/.gitignore
@@ -3,6 +3,7 @@
 CW
 user/migrations
 task/migrations
-task/__pycache__/
 ../../../New folder/BlogPlatformProjec
-user/__pycache__/
+__pycache__/
+**/__pycache__/
+*/__pycache__/
