--- a/CW/week16/task_management/.gitignore
+++ b/CW/week16/task_management/.gitignore
@@ -5,3 +5,8 @@ __pycache__/
 **/__pycache__/
 */__pycache__/
 */migrations/
+.idea/
+__pypackages__/
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
